# cumplo-sanitizer

./: README.md  cumplo_core.py  mayo_fix_data_exporter.py  pyproject.toml  sanityzer.ipynb
cumplo_sanitizer/: cumplo_core.py  sanityzer.ipynb  some_utils.py
cumplo_sanitizer/data_in/: Resumen de flujos - 2023-10-29.xlsx  Resumen de flujos - 2023-10-31.xlsx  Resumen de flujos - 2023-11-01.xlsx  Resumen de flujos - 2023-12-23.xlsx  Resumen de movimientos - 2023-10-29.xls  Resumen de movimientos - 2023-10-31.xls  Resumen de movimientos - 2023-11-01.xls  Resumen de movimientos - 2023-12-23.xls  fix_data.csv
cumplo_sanitizer/src/: cumplo_core.py  mayo_fix_data_exporter.py  some_utils.py
cumplo_sanitizer/tests/: cumplo_core__get_active_and_late_ids__test.py  cumplo_core__get_rates__test.py  cumplo_core__insert_fix__test.py  cumplo_core__negative_earnings__test.py
cumplo_sanitizer/tests/flujo_files/: Resumen de flujos_4completed_2active.xlsx  Resumen de flujos_6_not_paid_but_collectible.xlsx  Resumen de flujos_6active.xlsx  Resumen de flujos_6completed.xlsx  Resumen de flujos_id_15572_ok_but_then_not_paid.xlsx  Resumen de flujos_id_15731_late_and_ok.xlsx  Resumen de flujos_id_20970_late_but_collectible.xlsx  Resumen de flujos_id_20970_ok_but_then_not_paid.xlsx  Resumen de flujos_id_20970_uncollectible.xlsx  Resumen de flujos_id_21033_ok_and_late.xlsx  Resumen de flujos_id_[20932]_late_and_ok.xlsx
data_out/: sanitized_and_classified.feather
