[tool.poetry]
name = "cumplo-sanitizer"
version = "0.1.0"
description = "Simple jupyter notebook to clean and organize cumplo.cl flows and investments."
authors = ["Mayo Nesso"]
license = "MIT License"
readme = "README.md"
packages = [{include = "cumplo_sanitizer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.25.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
seaborn = "^0.12.2"
pyxirr = "^0.9.3"
ipywidgets = "7.7.2"
xlrd = "^2.0.1"
itables = "^1.6.2"
pyarrow = "^13.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
